--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "npm run dev:h5",
+    "serve": "npm run dev:mp-weixin",
     "build": "npm run build:h5",
     "build:app-plus": "cross-env NODE_ENV=production UNI_PLATFORM=app-plus vue-cli-service uni-build",
     "build:custom": "cross-env NODE_ENV=production uniapp-cli custom",
@@ -67,6 +67,7 @@
     "@dcloudio/uni-quickapp-webview": "^2.0.2-4000820240401001",
     "@dcloudio/uni-stacktracey": "^2.0.2-4000820240401001",
     "@dcloudio/uni-stat": "^2.0.2-4000820240401001",
+    "@hyoga/uni-socket.io": "^3.0.4",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
