--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,12 +13,11 @@
 			"autoclose": true,
 			"delay": 0
 		},
-		"modules": { /* 模块配置 */
-
-		},
+		"modules": { /* 模块配置 */},
 		"distribute": { /* 应用发布信息 */
 			"android": { /* android打包配置 */
-				"permissions": ["<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
+				"permissions": [
+					"<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
 					"<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
 					"<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
 					"<uses-permission android:name=\"android.permission.VIBRATE\"/>",
@@ -42,34 +41,32 @@
 					"<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
 				]
 			},
-			"ios": { /* ios打包配置 */
-
-			},
-			"sdkConfigs": { /* SDK配置 */
-
-			}
+			"ios": { /* ios打包配置 */},
+			"sdkConfigs": { /* SDK配置 */}
 		}
 	},
-	"quickapp": { /* 快应用特有相关 */
-
-	},
+	"quickapp": { /* 快应用特有相关 */},
 	"mp-weixin": { /* 微信小程序特有相关 */
-		"appid": "",
+		"appid": "wx8a76cd4a53dafb98",
 		"setting": {
 			"urlCheck": false
 		},
+		"usingComponents": true,
+		"requiredPrivateInfos": [
+			// "chooseLocation",
+			"getLocation"
+		]
+	},
+	"mp-alipay": {
 		"usingComponents": true
 	},
-	"mp-alipay" : {
-        "usingComponents" : true
-    },
-    "mp-baidu" : {
-        "usingComponents" : true
-    },
-    "mp-toutiao" : {
-        "usingComponents" : true
-    },
-    "mp-qq" : {
-        "usingComponents" : true
-    }
+	"mp-baidu": {
+		"usingComponents": true
+	},
+	"mp-toutiao": {
+		"usingComponents": true
+	},
+	"mp-qq": {
+		"usingComponents": true
+	}
 }
